# mwdstdcore

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
debug/gmag/: _test_gmag.py
debug/models/: dnimodel.py  ext_fields.py  run.py  station.py  survey.py  testdni.py  testraj.py  testrun.py  traj.py
debug/msa/: _test_autocor.py  _test_correct.py  _test_qc.py
debug/sag/: __bha_motor__.json  __bha_rss__.json  __bha_test__.json  _test_sag.py  _test_sag_motor.py  _test_sag_pipe.py  _test_sag_rss.py  compare_eng_vs_frc.py
debug/steer/: _test_hdtraj.py
mwdstdcore/: server.py
mwdstdcore/api/: apierror.py  logs.py  utils.py
mwdstdcore/api/v1/: __init__.py  core.py  geomag.py  hdtraj.py  lv1b.py  lv2b.py  lv3b.py  (+7 more)
mwdstdcore/auto/: act_vs_plan.py  autocor.py  manualcor.py  valid.py
mwdstdcore/cli/: mwdhdtraj.py  mwdmsa.py  mwdsag.py
mwdstdcore/core/: reginc.py  wfunc.py
mwdstdcore/datamodel/: __init__.py  accu.py  bha.py  cor_survey.py  correction.py  dni_params.py  interval.py  link.py  qa.py  qc_bond.py  ref.py  run.py  slide.py  station.py  survey.py  toolcode.py  validators.py  well.py
mwdstdcore/errormods/: codes.py  dnimsa.py  dnistd.py  gmagmod.py  unknown.py
mwdstdcore/msa/: apstan.py  correct.py  covan.py  qc.py
mwdstdcore/sag/: bha2input.py  cdesc.py  sagcor.py
mwdstdcore/steer/: cinc2traj.py  opt4hd.py
tests/: params.py  simulation.py  test_gmag.py  test_msa.py  test_sag.py
tests/api/: test_common.py  test_lv1b.py  test_lv2b.py  test_lv3b.py  test_mcorrect.py  test_refcalc.py  test_ver.py
tests/api_utils/: test_utils_sag.py
(+47 files in other folders)
